@@ -5,6 +5,9 @@ Please note, the Opus Primus copyright can be found at the end of this file.
 == Version 1.2.5 ==
 * Released ...
 
+= Code =
+* Set Customization path and URL CONSTANTS
+
 == Version 1.2.4 ==
 * Released May 2014
 
